// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should render Checkbox component in checked state correctly 1`] = `
<label
  className="root"
>
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="box"
  />
</label>
`;

exports[`It should render Checkbox component in checked state correctly 2`] = `
<label
  className="root"
>
  <input
    checked={true}
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="box"
  />
</label>
`;
